--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -232,7 +232,7 @@ The operation is unaffected by schema change(s).
 </td>
 <td>
 
-A user has marked schema change(s) for this operation as safe.
+A user has marked schema change(s) for this operation as [safe](#overriding-flagged-changes).
 
 </td>
 </tr>
