--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -167,12 +167,19 @@ Before January 2021, graph keys did not have roles. Keys created before that dat
 
 ## Inviting members
 
-**Org Admin**s can invite individual members by email address from your organization's Members tab in [GraphOS Studio](https://studio.apollographql.com). Organization admins can also create a persistent **invite link** from the organization's Settings tab, which can be used to invite any number of members. Using either method, an org admin can specify which role a new member receives.
+<Note>
+
+For organizations using single sign-on (SSO), access to GraphOS is exclusively managed through your identity provider (IdP).
+Any invitation links issued before SSO setup will be automatically revoked once SSO is enabled.
+
+</Note>
+
+**Org Admin**s can invite individual members by email address from your organization's **Members** tab in [GraphOS Studio](https://studio.apollographql.com). Organization admins can also create a persistent **invite link** from the organization's **Settings** tab, which can be shared to invite any number of members. Using either method, an org admin can specify which role a new member receives.
 
 <Caution>
 
-- Once single sign-on (SSO) has been enabled, all invite links will be disabled and removed.
-- **Do not share invite links publicly.** Anyone with the link can join your organization. If an invite link becomes compromised, an admin can replace or turn it off from the Settings tab.
+Never share invite links publicly. Anyone with the link can join your organization.
+If an invite link becomes compromised, an admin can revoke it from the **Settings > Invite links** section.
 
 </Caution>
 
