Use shared content in SSO docs

--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -178,8 +178,8 @@ Any invitation links issued before SSO setup will be automatically revoked once 
 
 <Caution>
 
-Never share invite links publicly. Anyone with the link can join your organization.
-If an invite link becomes compromised, an admin can revoke it from the **Settings > Invite links** section.
+**Never share invite links publicly**. Anyone with the link can join your organization.
+If an invite link becomes compromised, an admin should revoke it from the **Settings > Invite links** section.
 
 </Caution>
 
