--- a/src/content/graphos/org/sso/self-service/saml-microsoft-entra-id.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-microsoft-entra-id.mdx
@@ -14,6 +14,8 @@ If you are setting up SSO for the first time, please refer to [these instruction
 
 This guide walks through configuring Microsoft Entra ID (formerly known as Azure Active Directory) as your GraphOS organization's identity provider (IdP) for SAML-based SSO.
 
+<SSORevokesInvitationLinks />
+
 <SSOMigrationNotice />
 
 ## Prerequisites
