--- a/src/content/graphos/org/sso/self-service/saml-okta.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-okta.mdx
@@ -14,6 +14,8 @@ If you're setting up SSO for the first time, please refer to [these instructions
 
 This guide walks through configuring Okta as your GraphOS organization's identity provider (IdP) for SAML-based SSO. Once you've set up your integration, you need to assign users to it in Okta so they can access GraphOS Studio via SSO.
 
+<SSORevokesInvitationLinks />
+
 <SSOMigrationNotice />
 
 ## Prerequisites
