--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -9,6 +9,8 @@ description: Configure a OpenID Connect (OIDC) based identity provider as your A
 This guide walks through configuring a generic OpenID Connect (OIDC) based identity provider (IdP) for use with Apollo SSO.
 If you use Microsoft Entra ID as your IdP, instead see [the Entra OIDC guide](./microsoft-entra-id-integration-oidc-guide/).
 
+<SSORevokesInvitationLinks />
+
 # Setup
 
 SSO setup has two main steps:
