--- a/src/content/shared/sso-revokes-invitation-links.mdx
+++ b/src/content/shared/sso-revokes-invitation-links.mdx
@@ -1,6 +1,7 @@
 <Note>
 
-For organizations using single sign-on (SSO), access to GraphOS is exclusively managed through your identity provider (IdP).
-Any [invitation links](/graphos/org/members/#inviting-members) issued before SSO setup will be automatically revoked once SSO is enabled.
+For organizations using SSO, access to GraphOS is exclusively managed through your IdP.
+Any [invitation links](/graphos/org/members/#inviting-members) created before SSO setup will be automatically revoked and you won't be able to create new invitation links once SSO is enabled.
+To give team members access, assign them to the GraphOS application in your IdP.
 
 </Note>
