--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -170,7 +170,7 @@ Before January 2021, graph keys did not have roles. Keys created before that dat
 <Note>
 
 For organizations using single sign-on (SSO), access to GraphOS is exclusively managed through your identity provider (IdP).
-Any invitation links issued before SSO setup will be automatically revoked once SSO is enabled.
+Any invitation links created before SSO setup will be automatically revoked and you won't be able to create new invitation links once SSO is enabled.
 
 </Note>
 
