Add Summit callouts

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -30,9 +30,16 @@ import {
   DocsetGrid,
   GradientCard
 } from '../../components/HomePage';
+import {SummitCallout} from '../../components/SummitCallout';
 
 Apollo provides the developer platform and tools to unify your data and services into a _supergraph_—a single distributed GraphQL API.
 Apollo makes GraphQL work for you at any stage and any scale, whether you're just getting started, building your first API, querying an API, or migrating your platform onto the supergraph.
+
+<SummitCallout topic="GraphQL API development">
+
+Walk the path of a successful API architecture project in the GraphQL Summit Workshop: [Greenfield API development with GraphOS](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712956231510001do5P).
+
+</SummitCallout>
 
 ## For architects
 
