--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -6,6 +6,12 @@ description: Learn how to monitor and optimize your GraphQL usage and performanc
 
 GraphOS Studio offers a performant and intuitive UI to help you monitor and understand your supergraph's usage and performance.
 
+<SummitCallout topic="supergraph observability">
+
+Explore observability best practices in the GraphQL Summit Workshop: [Observability for the supergraph: Best practices for graph-native telemetry](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947030008001KyII).
+
+</SummitCallout>
+
 ## Metrics collection and forwarding
 
 To analyze operation metrics in GraphOS Studio, you must first report them to GraphOS. If you have a [cloud supergraph](../quickstart/cloud), its router automatically reports operation metrics.
