--- a/src/content/technotes/TN0031-graph-identities.mdx
+++ b/src/content/technotes/TN0031-graph-identities.mdx
@@ -6,6 +6,12 @@ id: TN0031
 tags: [schema-design]
 ---
 
+<SummitCallout topic="schema design">
+
+Explore schema design strategies in the GraphQL Summit Workshop: [Schema design excellence](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947470535001L9a9).
+
+</SummitCallout>
+
 The purpose of this tech note is to demonstrate queries/mutations for identifying an actor attempting to use the graph. These examples can be useful for inspiring how the actor identity may be described in a GraphQL Schema and includes multiple use-cases for both users and services.
 
 Our use-case identifies authenticated users and services as well as anonymous users.
