--- a/src/content/graphos/basics/operations/subscriptions.mdx
+++ b/src/content/graphos/basics/operations/subscriptions.mdx
@@ -12,6 +12,12 @@ You can also use subscriptions with an Enterprise self-hosted supergraph. See th
 
 </PreviewFeature>
 
+<SummitCallout topic="federated subscriptions">
+
+Explore subscriptions in the GraphQL Summit Workshop: [Realtime data across your graph with federated subscriptions](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947533686001PnBR).
+
+</SummitCallout>
+
 Cloud supergraphs provide preview support for GraphQL subscription operations:
 
 ```graphql
