--- a/src/content/graphos/delivery/index.mdx
+++ b/src/content/graphos/delivery/index.mdx
@@ -9,6 +9,12 @@ GraphOS provides schema pipeline tools to develop and deploy changes to your gra
 - **Schema governance** tools let you manage, validate, and enforce standards in your schemas.
 - **Schema delivery** tools let you integrate schema publication into your DevOps workflows.
 
+<SummitCallout topic="schema design">
+
+Explore schema design strategies in the GraphQL Summit Workshop: [Schema design excellence](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947470535001L9a9).
+
+</SummitCallout>
+
 ## Schema governance
 
 GraphOS provides the following schema governance tools:
