--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -10,6 +10,12 @@ See the left navigation for a list of all Enterprise-specific articles from acro
 
 To compare GraphOS feature support across all plan types, see the [pricing page](https://www.apollographql.com/pricing/).
 
+<SummitCallout topic="Enterprise features">
+
+Explore how graph implementations can be scaled across multiple teams and complex development environments in the GraphQL Summit Workshop: [End-to-end GraphOS Enterprise](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947208205001SYSN).
+
+</SummitCallout>
+
 ## Enterprise trial
 
 You can sign up for a GraphOS Enterprise trial to test out most Enterprise features for the duration of the trial period.
