--- a/src/content/technotes/TN0010-reponse-type-pattern.mdx
+++ b/src/content/technotes/TN0010-reponse-type-pattern.mdx
@@ -7,6 +7,12 @@ id: TN0010
 tags: [schema-design]
 ---
 
+<SummitCallout topic="schema design">
+
+Explore schema design strategies in the GraphQL Summit Workshop: [Schema design excellence](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947470535001L9a9).
+
+</SummitCallout>
+
 ## Response types for mutations
 
 <Tip>
