--- a/src/content/technotes/TN0026-thinking-in-entities.mdx
+++ b/src/content/technotes/TN0026-thinking-in-entities.mdx
@@ -7,6 +7,12 @@ id: TN0026
 tags: [federation, schema-design]
 ---
 
+<SummitCallout topic="federated subscriptions">
+
+Explore subscriptions in the GraphQL Summit Workshop: [Realtime data across your graph with federated subscriptions](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947533686001PnBR).
+
+</SummitCallout>
+
 <Tip>
 
 If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Schema design](https://www.apollographql.com/tutorials/schema-design-best-practices) course on Odyssey.
