--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -46,11 +46,11 @@ flowchart LR;
 
 The GraphOS platform provides an ever-growing collection of tools and services to help you build your supergraph and scale it safely.
 
-<SummitCallout topic="GraphOS features">
-
-Explore GraphOS features in the GraphQL Summit Workshop: [Scaling your graph: Drive efficiency and collaboration with GraphOS](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712944865354001K23Q).
-
-</SummitCallout>
+<SummitCallout
+  topic="GraphOS features"
+  workshopName="Scaling your graph: Drive efficiency and collaboration with GraphOS"
+  URL="https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712944865354001K23Q"
+/>
 
 ### Core features
 
