--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -6,11 +6,11 @@ description: Learn how to monitor and optimize your GraphQL usage and performanc
 
 GraphOS Studio offers a performant and intuitive UI to help you monitor and understand your supergraph's usage and performance.
 
-<SummitCallout topic="supergraph observability">
-
-Explore observability best practices in the GraphQL Summit Workshop: [Observability for the supergraph: Best practices for graph-native telemetry](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947030008001KyII).
-
-</SummitCallout>
+<SummitCallout
+  topic="supergraph observability"
+  workshopName="Observability for the supergraph: Best practices for graph-native telemetry"
+  URL="https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947030008001KyII"
+/>
 
 ## Metrics collection and forwarding
 
