--- a/src/content/technotes/TN0023-nullability.mdx
+++ b/src/content/technotes/TN0023-nullability.mdx
@@ -7,11 +7,11 @@ id: TN0023
 tags: [schema-design, federation]
 ---
 
-<SummitCallout topic="schema design">
-
-Explore schema design strategies in the GraphQL Summit Workshop: [Schema design excellence](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947470535001L9a9).
-
-</SummitCallout>
+<SummitCallout
+  topic="schema design"
+  workshopName="Schema design excellence"
+  URL="https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947470535001L9a9"
+/>
 
 <Tip>
 
