--- a/src/content/technotes/TN0026-thinking-in-entities.mdx
+++ b/src/content/technotes/TN0026-thinking-in-entities.mdx
@@ -7,11 +7,11 @@ id: TN0026
 tags: [federation, schema-design]
 ---
 
-<SummitCallout topic="federated subscriptions">
-
-Explore subscriptions in the GraphQL Summit Workshop: [Realtime data across your graph with federated subscriptions](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947533686001PnBR).
-
-</SummitCallout>
+<SummitCallout
+  topic="entities"
+  workshopName="Federation from day 1: Thinking in entities"
+  URL="https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947980868001Lumq"
+/>
 
 <Tip>
 
