--- a/src/content/basics/intro/platform.mdx
+++ b/src/content/basics/intro/platform.mdx
@@ -74,11 +74,11 @@ The supergraph is not a replacement for your existing infrastructure. Instead, i
 
 ## What's in GraphOS?
 
-<SummitCallout topic="GraphOS features">
-
-Explore GraphOS features in the GraphQL Summit Workshop: [Scaling your graph: Drive efficiency and collaboration with GraphOS](https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712944865354001K23Q).
-
-</SummitCallout>
+<SummitCallout
+  topic="GraphOS features"
+  workshopName="Scaling your graph: Drive efficiency and collaboration with GraphOS"
+  URL="https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712944865354001K23Q"
+/>
 
 The GraphOS platform provides an ever-growing collection of tools and services to help you build your supergraph and scale it safely alongside your organization.
 
