Add summit callouts (#919)
* Add Summit callout

* Add Summit callouts

* Vale

* Update format

* Use RelativeLinks

* Add Summit Icon

* Update icon

* Copyedit

--- a/src/content/graphos/basics/operations/subscriptions.mdx
+++ b/src/content/graphos/basics/operations/subscriptions.mdx
@@ -12,6 +12,12 @@ You can also use subscriptions with an Enterprise self-hosted supergraph. See th
 
 </PreviewFeature>
 
+<SummitCallout
+  topic="federated subscriptions"
+  workshopName="Realtime data across your graph with federated subscriptions"
+  URL="https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947533686001PnBR"
+/>
+
 Cloud supergraphs provide preview support for GraphQL subscription operations:
 
 ```graphql
