--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -10,6 +10,14 @@ See the left navigation for a list of all Enterprise-specific articles from acro
 
 To compare GraphOS feature support across all plan types, see the [pricing page](https://www.apollographql.com/pricing/).
 
+Realtime data across your graph with federated subscriptions
+
+<SummitCallout
+  topic="Enterprise features"
+  workshopName="End-to-end GraphOS Enterprise"
+  URL="https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947208205001SYSN"
+/>
+
 ## Enterprise trial
 
 You can sign up for a GraphOS Enterprise trial to test out most Enterprise features for the duration of the trial period.
