--- a/src/content/technotes/TN0017-interfaces.mdx
+++ b/src/content/technotes/TN0017-interfaces.mdx
@@ -7,6 +7,12 @@ id: TN0017
 tags: [schema-design, federation]
 ---
 
+<SummitCallout
+  topic="schema design"
+  workshopName="Schema design excellence"
+  URL="https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947470535001L9a9"
+/>
+
 <Tip>
 
 If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Schema design](https://www.apollographql.com/tutorials/schema-design-best-practices) course on Odyssey.
