--- a/src/content/technotes/TN0020-mocked-gateway-for-client-development.mdx
+++ b/src/content/technotes/TN0020-mocked-gateway-for-client-development.mdx
@@ -7,6 +7,12 @@ id: TN0020
 tags: [gateway, schema-design, federation]
 ---
 
+<SummitCallout
+  topic="schema design"
+  workshopName="Schema design excellence"
+  URL="https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947470535001L9a9"
+/>
+
 As your organization builds out its supergraph, you might discover that your client teams are often waiting on subgraph owners to make agreed-upon changes to their schemas. During this time, you can _mock_ parts of your supergraph as you develop both your clients and subgraphs, enabling teams to work in parallel without blocking each other.
 
 ## First, agree on your schema
