--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -44,7 +44,13 @@ flowchart LR;
 
 ## What's in GraphOS?
 
-The GraphOS platform provides an ever-growing collection of tools and services to help you build your supergraph and scale it safely:
+The GraphOS platform provides an ever-growing collection of tools and services to help you build your supergraph and scale it safely.
+
+<SummitCallout
+  topic="GraphOS features"
+  workshopName="Scaling your graph: Drive efficiency and collaboration with GraphOS"
+  URL="https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712944865354001K23Q"
+/>
 
 ### Core features
 
@@ -74,7 +80,7 @@ Test out these features for free with an [Enterprise trial](./org/plans/#enterpr
 Additional GraphOS features are available to organizations on an Enterprise plan:
 
 - [Connect your self-hosted router to GraphOS](./quickstart/self-hosted/)
-  - The Apollo Router Core is available as a free and source-available runtime for Apollo Federation. Connecting your self-hosted router to GraphOS requires an Enterprise plan. Once you connect the Apollo Router Core to GraphOS, it is called GraphOS Router. 
+  - The Apollo Router Core is available as a free and source-available runtime for Apollo Federation. Connecting your self-hosted router to GraphOS requires an Enterprise plan. Once you connect the Apollo Router Core to GraphOS, it is called GraphOS Router.
   - Deploy GraphOS Routers inside your own infrastructure, enabling you to maximize performance and fully customize their behavior. Self-hosted routers use [the same powerful technology](/router/) that cloud routing uses under the hood.
   - Enable [advanced features](/router/enterprise-features/) for your router fleet, such as operation limits and Redis-backed distributed caching.
 - Supergraph filtering with [contracts](./delivery/contracts/)
