--- a/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
+++ b/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
@@ -7,6 +7,12 @@ id: TN0012
 tags: [schema-design]
 ---
 
+<SummitCallout
+  topic="schema design"
+  workshopName="Schema design excellence"
+  URL="https://reg.summit.graphql.com/flow/apollo/summit24/AttendeePortal/page/catalog/session/1712947470535001L9a9"
+/>
+
 Most GraphQL APIs provide their capabilities as root-level fields of the `Query` and `Mutation` types, resulting in a flat structure. For example, the GitHub GraphQL API has approximately 200 of these root-level fields! Even with tools like the Apollo Explorer, navigating and understanding larger "flat" graphs can be difficult.
 
 <Note>
