--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -590,8 +590,8 @@ type User {
 </RuleExpansionPanel>
 
 <RuleExpansionPanel
-  title="DEFINED_TYPES_ARE_USED"
-  whatItDoes="Checks that every type defined in a schema is be used at least once."
+  title="DEFINED_TYPES_ARE_UNUSED"
+  whatItDoes="Checks that every type defined in a schema is used at least once."
   rationale="Unused types waste resources and should be immediately removed once they've been refactored out of a schema."
 >
 
