--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -12,6 +12,8 @@ If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding
 - [Okta](./okta-integration-guide/)
 - [Microsoft Entra ID](./microsoft-entra-id-integration-saml-guide/) (formerly known as Azure Active Directory)
 
+<SSOOrgAdminRequirement />
+
 ## Setup
 
 SAML-based SSO setup has two main steps:
