--- a/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
@@ -18,6 +18,8 @@ If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding
 - [Okta](./oidc-okta)
 - [Microsoft Entra ID](./oidc-microsoft-entra-id) (formerly known as Azure Active Directory)
 
+<SSOOrgAdminRequirement />
+
 <SSOMigrationNotice />
 
 ## Prerequisites
