--- a/src/content/graphos/org/sso/overview.mdx
+++ b/src/content/graphos/org/sso/overview.mdx
@@ -29,14 +29,13 @@ To get started, follow the instructions for your configuration type and method:
 
 #### SAML-based
 
-- [Okta](./saml-okta)
-- [Microsoft Entra ID](./saml-microsoft-entra-id) (formerly known as Azure Active Directory)
+- [Okta](./okta-integration-guide)
+- [Microsoft Entra ID](./microsoft-entra-id-saml-integration-guide) (formerly known as Azure Active Directory)
 - [Generic SAML](./saml-integration-guide)
 
 #### OIDC-based
 
-- [Okta](./oidc-okta)
-- [Microsoft Entra ID](./oidc-microsoft-entra-id) (formerly known as Azure Active Directory)
+- [Microsoft Entra ID](./microsoft-entra-id-oidc-integration-guide) (formerly known as Azure Active Directory)
 - [Generic OIDC](./oidc-integration-guide/)
 
 ### Self-service setup
