--- a/src/content/graphos/org/sso/overview.mdx
+++ b/src/content/graphos/org/sso/overview.mdx
@@ -4,7 +4,12 @@ subtitle: Placeholder
 description: Placeholder
 ---
 
-<SSOPremiumFeature />
+<PremiumFeature>
+
+Single sign-on (SSO) is available only for [Dedicated and Enterprise plans](https://www.apollographql.com/pricing#security).
+This feature is not available as part of an Enterprise trial.
+
+</PremiumFeature>
 
 Single Sign-On allows your team to log into Apollo GraphOS using your organization's identity provider (IdP). This streamlines access management, improves security, and enhances the user experience by reducing the need to manage additional passwords.
 
