--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -8,6 +8,8 @@ description: Configure Okta as your Apollo GraphOS organization's SSO provider w
 
 This guide walks through configuring Okta as your GraphOS organization's identity provider (IdP) for SAML-based SSO. Once you've set up your integration, you need to assign users to it in Okta so they can access GraphOS Studio via SSO.
 
+If you're [migrating](./self-service/migration) your SSO configuration, see the [self-service instructions](./self-service/saml-okta).
+
 <SSOOrgAdminRequirement />
 
 ## Setup
