--- a/src/content/graphos/org/sso/overview.mdx
+++ b/src/content/graphos/org/sso/overview.mdx
@@ -28,7 +28,7 @@ Only GraphOS [Org admins](../members) can set up SSO. Additionally, you must hav
 
 ## Setup instructions
 
-To get started, follow the instructions for your configuration method and types:
+To get started, follow the instructions for your configuration method and type:
 
 ### Self-service setup
 
