--- a/src/content/shared/sso-org-admin-requirement.mdx
+++ b/src/content/shared/sso-org-admin-requirement.mdx
@@ -1,6 +1,6 @@
 <Note>
 
 Only [GraphOS org admins](/graphos/org/members#organization-wide-member-roles) can configure SSO.
-See the **Members** tab in [GraphOS Studio](https://studio.apollographql.com/) to see your role and which team members are org admins.
+Check the **Members** tab in [GraphOS Studio](https://studio.apollographql.com/) to see your role and which team members are org admins.
 
 </Note>
