Add SSO overview and clarifications (#921)
* Add overview

* Add and use org admin shared component

* Vale

* Fix links

* Reorganize SSO nav

* Add links to corresponding self-service guides

* Copyedit

* Copyedit

--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -9,6 +9,10 @@ description: Configure a OpenID Connect (OIDC) based identity provider as your A
 This guide walks through configuring a generic OpenID Connect (OIDC) based identity provider (IdP) for use with Apollo SSO.
 If you use Microsoft Entra ID as your IdP, instead see [the Entra OIDC guide](./microsoft-entra-id-integration-oidc-guide/).
 
+If you're [migrating](./self-service/migration) your SSO configuration, see the [self-service instructions](./self-service/oidc-integration-guide).
+
+<SSOOrgAdminRequirement />
+
 # Setup
 
 SSO setup has two main steps:
