--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
@@ -8,6 +8,10 @@ description: Configure Microsoft Entra ID (formerly Azure AD) as your Apollo Gra
 
 This guide walks through configuring Microsoft Entra ID (formerly known as Azure Active Directory) as your GraphOS organization's identity provider (IdP) for SAML-based SSO.
 
+If you're [migrating](./self-service/migration) your SSO configuration, see the [self-service instructions](./self-service/saml-microsoft-entra-id).
+
+<SSOOrgAdminRequirement />
+
 ## Setup
 
 SAML-based SSO setup has two main steps:
