--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -14,9 +14,11 @@ If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding
 
 If you're [migrating](./self-service/migration) your SSO configuration, see the [self-service instructions](./self-service/saml-integration-guide).
 
-<SSOOrgAdminRequirement />
+<SSORevokesInvitationLinks />
 
 ## Setup
+
+<SSOOrgAdminRequirement />
 
 SAML-based SSO setup has two main steps:
 
