--- a/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
@@ -18,7 +18,7 @@ If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding
 - [Okta](./oidc-okta)
 - [Microsoft Entra ID](./oidc-microsoft-entra-id) (formerly known as Azure Active Directory)
 
-<SSOOrgAdminRequirement />
+<SSORevokesInvitationLinks />
 
 <SSOMigrationNotice />
 
@@ -26,8 +26,9 @@ If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding
 
 Setup requires:
 
-- Administrative access to your IdP
 - A GraphOS user account with the [**Org Admin** role](../members/#organization-wide-member-roles)
+  - Check the **Members** tab in [GraphOS Studio](https://studio.apollographql.com/) to see your role and which team members are org admins
+- Administrative access to your IdP
 
 ## Setup
 
