--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
@@ -10,9 +10,11 @@ This guide walks through configuring Microsoft Entra ID (formerly known as Azure
 
 If you're [migrating](./self-service/migration) your SSO configuration, see the [self-service instructions](./self-service/oidc-microsoft-entra-id).
 
-<SSOOrgAdminRequirement />
+<SSORevokesInvitationLinks />
 
 ## Setup
+
+<SSOOrgAdminRequirement />
 
 OIDC-based SSO setup in Entra ID has these steps:
 
