--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
@@ -10,9 +10,11 @@ This guide walks through configuring Microsoft Entra ID (formerly known as Azure
 
 If you're [migrating](./self-service/migration) your SSO configuration, see the [self-service instructions](./self-service/saml-microsoft-entra-id).
 
-<SSOOrgAdminRequirement />
+<SSORevokesInvitationLinks />
 
 ## Setup
+
+<SSOOrgAdminRequirement />
 
 SAML-based SSO setup has two main steps:
 
