--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -11,9 +11,11 @@ If you use Microsoft Entra ID as your IdP, instead see [the Entra OIDC guide](./
 
 If you're [migrating](./self-service/migration) your SSO configuration, see the [self-service instructions](./self-service/oidc-integration-guide).
 
-<SSOOrgAdminRequirement />
+<SSORevokesInvitationLinks />
 
-# Setup
+## Setup
+
+<SSOOrgAdminRequirement />
 
 SSO setup has two main steps:
 
