--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -10,9 +10,11 @@ This guide walks through configuring Okta as your GraphOS organization's identit
 
 If you're [migrating](./self-service/migration) your SSO configuration, see the [self-service instructions](./self-service/saml-okta).
 
-<SSOOrgAdminRequirement />
+<SSORevokesInvitationLinks />
 
 ## Setup
+
+<SSOOrgAdminRequirement />
 
 SAML-based SSO setup has two main steps:
 
