--- a/src/content/graphos/org/sso/self-service/oidc-okta.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-okta.mdx
@@ -14,7 +14,7 @@ If you're setting up SSO for the first time, please refer to [these instructions
 
 This guide walks through configuring Okta as your GraphOS organization's identity provider (IdP) for OIDC-based SSO. Once you've set up your integration, you need to assign users to it in Okta so they can access GraphOS Studio via SSO.
 
-<SSOOrgAdminRequirement />
+<SSORevokesInvitationLinks />
 
 <SSOMigrationNotice />
 
@@ -22,8 +22,9 @@ This guide walks through configuring Okta as your GraphOS organization's identit
 
 Setup requires:
 
-- An Okta user account with administrator privileges
 - A GraphOS user account with the [**Org Admin** role](../members/#organization-wide-member-roles)
+  - Check the **Members** tab in [GraphOS Studio](https://studio.apollographql.com/) to see your role and which team members are org admins
+- Administrative access to your IdP
 
 ## Setup
 
